# plex_generate_vid_previews

./: .codecov.yml  .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCKERHUB_DEPRECATED_README.md  DOCKERHUB_README.md  Dockerfile  INIT_TRUE_FIX.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  TESTING.md  TEST_AUDIT.md  coverage.xml  docker-compose.example.yml  docker-compose.yaml  docker-entrypoint.sh  docker-init-dri-by-path.sh  docker-init-user.sh  env.example  init-adduser-clean  llms.txt  plan.md  plex_generate_previews.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.py  test_gpu_local.py  wrapper.sh
.claude/: CLAUDE.md  settings.json
.claude/agents/: architecture-review.md  code-reviewer.md  test-writer.md
.claude/rules/: commenting.md  docker.md  docs.md  python.md  shell.md  testing.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: code-review.agent.md  test-writer.agent.md
.github/instructions/: code-review-generic.instructions.md  containerization-docker-best-practices.instructions.md  github-actions-ci-cd-best-practices.instructions.md  markdown.instructions.md  no-heredoc.instructions.md  python.instructions.md  self-explanatory-code-commenting.instructions.md  shell.instructions.md  update-docs-on-code-change.instructions.md
.github/scripts/: run_architecture_review.py
.github/workflows/: architecture-review.yml  bump_version.yml  ci.yml  dev-release.yml  docker-pr-cleanup.yml  docker-pr.yml  docker-publish.yml  gpu-tests.yml  jellyfin-plugin.yml  publish_docker.yml  publish_pypi.yml  release.yml  test.yml
docs/: API.md  README.md  configuration.md  docker.md  faq.md  getting-started.md  gpu-support.md  guides.md  multi-server.md  quickstart.md  reference.md  unraid.md  web-interface.md
docs/design/: 2026-05-17-intro-credits-detection-design.md  inspector-mockup.html  theintrodb-openapi-v2.yaml
docs/guides/: previews-readiness.md
jellyfin-plugin/: .gitignore  Jellyfin.Plugin.MediaPreviewBridge.csproj  Plugin.cs  README.md  manifest.template.json
jellyfin-plugin/Api/: TrickplayBridgeController.cs
jellyfin-plugin/Configuration/: PluginConfiguration.cs
media_preview_generator/: __init__.py  _version.py  bif_reader.py  logging_config.py  plex_client.py  release_notes.json  upgrade.py  utils.py  version_check.py
media_preview_generator/config/: __init__.py  paths.py  validation.py
media_preview_generator/gpu/: __init__.py  detect.py  ffmpeg_capabilities.py  vulkan_probe.py
media_preview_generator/jobs/: __init__.py  dispatcher.py  orchestrator.py  worker.py  worker_naming.py
media_preview_generator/output/: __init__.py  base.py  emby_sidecar.py  jellyfin_trickplay.py  journal.py  plex_bundle.py
media_preview_generator/processing/: __init__.py  _embyish.py  _shared.py  base.py  emby.py  ffmpeg_runner.py  filter_chain.py  frame_cache.py  generator.py  jellyfin.py  multi_server.py  orchestrator.py  plex.py  registry.py  retry_cascade.py  retry_queue.py  types.py
media_preview_generator/search/: __init__.py  query.py  rank.py
media_preview_generator/servers/: __init__.py  _embyish.py  _mediabrowser_auth.py  base.py  emby.py  emby_auth.py  jellyfin.py  jellyfin_auth.py  ownership.py  plex.py  registry.py
media_preview_generator/web/: app.py  auth.py  job_gate.py  jobs.py  notifications.py  plex_webhook_registration.py  recent_added_scanner.py  scheduler.py  settings_manager.py  webhook_debouncer.py  webhook_router.py  webhooks.py  wsgi.py
plex_generate_previews/: __init__.py  __main__.py  _version.py  bif_reader.py  cli.py  config.py  credits_detection.py  filter_chain.py  gpu_detection.py  intro_detection.py  job_dispatcher.py  job_orchestrator.py  logging_config.py  media_processing.py  plex_client.py  plex_db.py  plex_watch.py  processing.py  scheduler.py  service.py  upgrade.py  utils.py  version_check.py  worker.py
plex_generate_previews/config/: __init__.py  paths.py  validation.py
plex_generate_previews/gpu/: __init__.py  detect.py  enumeration.py  ffmpeg_capabilities.py  vaapi_probe.py  vulkan_probe.py
plex_generate_previews/jobs/: __init__.py  dispatcher.py  orchestrator.py  worker.py
plex_generate_previews/output/: __init__.py  base.py  emby_sidecar.py  jellyfin_trickplay.py  plex_bundle.py
plex_generate_previews/processing/: __init__.py  ffmpeg_runner.py  filter_chain.py  frame_cache.py  hdr_detection.py  multi_server.py  orchestrator.py  retry_cascade.py  retry_queue.py
plex_generate_previews/servers/: __init__.py  _embyish.py  base.py  emby.py  emby_auth.py  jellyfin.py  jellyfin_auth.py  ownership.py  plex.py  (+1 more)
scripts/: refresh_release_notes.py  regen_readme_screenshots.sh
tests/: REGRESSION_VERIFIED.md  VISUAL_REGRESSION_CHECKLIST.md  __init__.py  conftest.py  test_api_jobs_attempts.py  test_api_jobs_multi_plex_inference.py  test_api_server_auth.py  test_api_servers.py  test_app.py  test_auth_external.py  test_auth_setup_guard.py  test_basic.py  test_bif_viewer.py  test_cli.py  test_concurrent_jobs.py  test_config.py  test_credits_detection.py  test_dispatcher_kwargs_matrix.py  test_dispatcher_worker_status_contract.py  test_dv_hdr_pixel_correctness.py  test_eta_calculation.py  test_ffmpeg_runner_progress_decode.py  test_file_results.py  test_full_scan_multi_server.py  test_gpu_ci.py  test_gpu_detection_extended.py  test_headers.py  test_integration.py  test_intro_detection.py  test_job_dispatcher.py  test_job_modal_overview_renderer.py  test_job_runner_completion.py  test_jobs.py  test_jobs_retry_chain.py  test_logging_config.py  test_main.py  test_media_mount_health.py  test_media_processing.py  test_multi_server_cleanup.py  test_multi_server_missing_disk_logging.py  (+81 more)
tools/: bench_emby_reverse_path.py  manual_mutation_test.py  monitor_dev_container.py
unraid-templates/: README.md  plex-generate-previews.xml
(+302 files in other folders)
