[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "plex-generate-previews"
dynamic = ["version"]
authors = [
    {name = "stevezau", email = "stevezau@example.com"},
]
description = "Generate video preview thumbnails for Plex Media Server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video",
    "Topic :: System :: Archiving",
]
keywords = ["plex", "media", "server", "video", "thumbnails", "previews", "ffmpeg", "gpu", "acceleration"]
dependencies = [
    "requests==2.32.3",
    "urllib3>=1.26.0,<3.0.0",
    "python-dotenv==1.1.1",
    "plexapi==4.17.1",
    "loguru==0.7.3",
    "rich==13.8.1",
    "pymediainfo==7.0.1",
    "psutil>=5.9.0,<6.0.0",
]

[project.optional-dependencies]
nvidia = ["pynvml==11.6.0"]
amd = ["amdsmi==6.2.1"]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/stevezau/plex_generate_vid_previews"
Repository = "https://github.com/stevezau/plex_generate_vid_previews"
Issues = "https://github.com/stevezau/plex_generate_vid_previews/issues"

[project.scripts]
plex-generate-previews = "plex_generate_previews.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["plex_generate_previews*"]

[tool.setuptools.package-data]
plex_generate_previews = ["fixtures/*.mp4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=plex_generate_previews",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=70",
    "-v"
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["plex_generate_previews"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/test_env/*"
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.setuptools_scm]
write_to = "plex_generate_previews/_version.py"
local_scheme = "no-local-version"
fallback_version = "0.0.0+unknown"
